fixed footer spacing

--- a/assets/footer.css
+++ b/assets/footer.css
@@ -3,29 +3,40 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 3rem;
+  margin-bottom: 3rem;
 }
 .footer_link_sub_container {
   display: flex;
   flex-direction: row;
-  gap: 3rem;
-  justify-content: flex-start;
-  background-color: aquamarine;
+  gap: 5rem;
+}
+.footer_link_sub_container > div:nth-child(1) {
+  padding-right: 1rem;
 }
 .footer_list_heading {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 400;
   color: #333;
   margin-bottom: 0.5rem;
 }
+.footer_menu_nav ul{
+  padding-left: 0;
+  padding-inline-start: 0;
+}
 .footer_link_sub_container li {
   list-style-type: none;
-  font-size: 1.2rem;
 }
 .footer_link_sub_container a {
   text-decoration: none;
   color: #333;
   font-size: 1.2rem;
   line-height: 1.9rem;
+}
+.footer_social_container {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-bottom: 1.5rem;
 }
 .footer_border {
   border-top: 1px solid #333333;
@@ -38,5 +49,40 @@
   font-size: o.9rem;
   color: #333;
   text-align: center;
-  padding: 1rem 0;
+}
+@media screen and (max-width: 800px) {
+  .footer_link_container {
+    flex-direction: column-reverse;
+    gap: 2rem;
+    margin-bottom: 0;    
+  }
+  .footer_link_sub_container {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer_logo_container {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 600px) {
+  .footer_link_sub_container {
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1.5rem;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+  }
+  .footer_link_sub_container li {
+    text-align: center;
+  }
+  .footer_link_sub_container a {
+    
+    font-size: 1rem;
+    line-height: 2.1rem;
+  }
 }
